; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/openmaxil/extr_mmalomx_core.c_mmalomx_ComponentUseEGLImage.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/openmaxil/extr_mmalomx_core.c_mmalomx_ComponentUseEGLImage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@.str = private unnamed_addr constant [74 x i8] c"hComponent %p, ppBufferHdr %p, nPortIndex %i, pAppPrivate %p, eglImage %p\00", align 1
@OMX_ErrorInvalidComponent = common dso_local global i32 0, align 4
@OMX_StateInvalid = common dso_local global i64 0, align 8
@OMX_ErrorInvalidState = common dso_local global i32 0, align 4
@OMX_ErrorNotImplemented = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32**, i64, i32, i8*)* @mmalomx_ComponentUseEGLImage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mmalomx_ComponentUseEGLImage(i64 %0, i32** %1, i64 %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca %struct.TYPE_3__*, align 8
  store i64 %0, i64* %7, align 8
  store i32** %1, i32*** %8, align 8
  store i64 %2, i64* %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  %13 = load i64, i64* %7, align 8
  %14 = inttoptr i64 %13 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %14, %struct.TYPE_3__** %12, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %16 = call i32 @MMAL_PARAM_UNUSED(%struct.TYPE_3__* %15)
  %17 = load i64, i64* %7, align 8
  %18 = load i32**, i32*** %8, align 8
  %19 = load i64, i64* %9, align 8
  %20 = trunc i64 %19 to i32
  %21 = load i32, i32* %10, align 4
  %22 = load i8*, i8** %11, align 8
  %23 = call i32 @LOG_TRACE(i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str, i64 0, i64 0), i64 %17, i32** %18, i32 %20, i32 %21, i8* %22)
  %24 = load i64, i64* %7, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %28, label %26

26:                                               ; preds = %5
  %27 = load i32, i32* @OMX_ErrorInvalidComponent, align 4
  store i32 %27, i32* %6, align 4
  br label %38

28:                                               ; preds = %5
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load i64, i64* @OMX_StateInvalid, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %28
  %35 = load i32, i32* @OMX_ErrorInvalidState, align 4
  store i32 %35, i32* %6, align 4
  br label %38

36:                                               ; preds = %28
  %37 = load i32, i32* @OMX_ErrorNotImplemented, align 4
  store i32 %37, i32* %6, align 4
  br label %38

38:                                               ; preds = %36, %34, %26
  %39 = load i32, i32* %6, align 4
  ret i32 %39
}

declare dso_local i32 @MMAL_PARAM_UNUSED(%struct.TYPE_3__*) #1

declare dso_local i32 @LOG_TRACE(i8*, i64, i32**, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
